secured controller & test token generator
